--- a/guipanel.ui
+++ b/guipanel.ui
@@ -307,7 +307,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>10</y>
+       <y>12</y>
        <width>71</width>
        <height>16</height>
       </rect>
@@ -319,9 +319,9 @@
     <widget class="QSpinBox" name="frameNumber">
      <property name="geometry">
       <rect>
-       <x>80</x>
+       <x>78</x>
        <y>7</y>
-       <width>40</width>
+       <width>41</width>
        <height>22</height>
       </rect>
      </property>
@@ -331,8 +331,14 @@
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
+     <property name="suffix">
+      <string/>
+     </property>
+     <property name="prefix">
+      <string/>
+     </property>
     </widget>
-    <widget class="QLineEdit" name="boxFlags_2">
+    <widget class="QLineEdit" name="timeOfFrame">
      <property name="geometry">
       <rect>
        <x>130</x>
@@ -348,7 +354,7 @@
       <string/>
      </property>
      <property name="readOnly">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QLabel" name="label_4">
