--- a/askTexturenameDialog.ui
+++ b/askTexturenameDialog.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>AskBoneDialog</class>
- <widget class="QDialog" name="AskBoneDialog">
+ <class>askTexturenameDialog</class>
+ <widget class="QDialog" name="askTexturenameDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>312</width>
-    <height>167</height>
+    <width>273</width>
+    <height>142</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>-100</x>
-     <y>130</y>
+     <x>-130</x>
+     <y>100</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -29,92 +29,56 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QComboBox" name="cbSlel">
+  <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>60</y>
-     <width>161</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QComboBox" name="cbBone">
-   <property name="geometry">
-    <rect>
-     <x>140</x>
-     <y>90</y>
-     <width>161</width>
-     <height>21</height>
+     <x>70</x>
+     <y>40</y>
+     <width>121</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>60</y>
-     <width>120</width>
-     <height>20</height>
+     <x>16</x>
+     <y>45</y>
+     <width>46</width>
+     <height>14</height>
     </rect>
    </property>
    <property name="text">
-    <string>Reference skeleton:</string>
+    <string>name:</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>90</y>
-     <width>120</width>
-     <height>20</height>
+     <x>200</x>
+     <y>40</y>
+     <width>51</width>
+     <height>23</height>
     </rect>
    </property>
    <property name="text">
-    <string>Bone:</string>
-   </property>
-   <property name="alignment">
-    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    <string>Browse</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>10</y>
-     <width>191</width>
-     <height>21</height>
+     <x>70</x>
+     <y>70</y>
+     <width>181</width>
+     <height>18</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <italic>true</italic>
-    </font>
-   </property>
    <property name="text">
-    <string>This object is not rigged:</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>26</y>
-     <width>261</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <italic>true</italic>
-    </font>
-   </property>
-   <property name="text">
-    <string>Select a skeleton and a bone to attach it to.</string>
+    <string>also add a new Texture</string>
    </property>
   </widget>
  </widget>
@@ -123,7 +87,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>AskBoneDialog</receiver>
+   <receiver>askTexturenameDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -139,7 +103,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>AskBoneDialog</receiver>
+   <receiver>askTexturenameDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
