--- a/guipanel.ui
+++ b/guipanel.ui
@@ -112,9 +112,6 @@
     <property name="text">
      <string/>
     </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
@@ -378,7 +375,7 @@
      <x>10</x>
      <y>230</y>
      <width>181</width>
-     <height>201</height>
+     <height>381</height>
     </rect>
    </property>
    <property name="sizePolicy">
@@ -390,7 +387,7 @@
    <property name="title">
     <string>View</string>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,1">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0,0,0,0,1">
     <property name="sizeConstraint">
      <enum>QLayout::SetMinimumSize</enum>
     </property>
@@ -450,7 +447,7 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>60</height>
+        <height>55</height>
        </size>
       </property>
       <property name="baseSize">
@@ -550,7 +547,7 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>20</height>
+        <height>15</height>
        </size>
       </property>
       <widget class="QCheckBox" name="cbFloor">
@@ -567,6 +564,67 @@
        </property>
        <property name="checked">
         <bool>true</bool>
+       </property>
+      </widget>
+     </widget>
+    </item>
+    <item>
+     <widget class="QWidget" name="viewRuler" native="true">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>22</height>
+       </size>
+      </property>
+      <widget class="QSpinBox" name="rulerSpin">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>0</y>
+         <width>41</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="maximum">
+        <number>511</number>
+       </property>
+       <property name="value">
+        <number>100</number>
+       </property>
+      </widget>
+      <widget class="QSlider" name="rulerSlid">
+       <property name="geometry">
+        <rect>
+         <x>59</x>
+         <y>1</y>
+         <width>80</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="maximum">
+        <number>300</number>
+       </property>
+       <property name="value">
+        <number>100</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="cbRuler">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>0</y>
+         <width>51</width>
+         <height>17</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Ruler</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
        </property>
       </widget>
      </widget>
@@ -814,7 +872,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>810</y>
+     <y>940</y>
      <width>181</width>
      <height>71</height>
     </rect>
@@ -865,7 +923,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>1200</y>
+     <y>1340</y>
      <width>181</width>
      <height>111</height>
     </rect>
@@ -982,94 +1040,14 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>900</y>
+     <y>1010</y>
      <width>181</width>
-     <height>251</height>
+     <height>281</height>
     </rect>
    </property>
    <property name="title">
     <string>Data</string>
    </property>
-   <widget class="QLabel" name="label_12">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>35</y>
-      <width>46</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Shader:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_13">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>65</y>
-      <width>46</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>DiffuseA:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_18">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>85</y>
-      <width>46</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>DiffuseB:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_19">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>105</y>
-      <width>46</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Bump:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_20">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>125</y>
-      <width>46</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Enviro:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="leMatShader">
     <property name="geometry">
      <rect>
@@ -1176,22 +1154,6 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="label_24">
-    <property name="geometry">
-     <rect>
-      <x>5</x>
-      <y>145</y>
-      <width>51</width>
-      <height>14</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Specmap:</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_25">
     <property name="geometry">
      <rect>
@@ -1222,8 +1184,8 @@
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>220</y>
-      <width>111</width>
+      <y>249</y>
+      <width>81</width>
       <height>20</height>
      </rect>
     </property>
@@ -1232,7 +1194,7 @@
     <property name="geometry">
      <rect>
       <x>15</x>
-      <y>225</y>
+      <y>254</y>
       <width>41</width>
       <height>14</height>
      </rect>
@@ -1244,12 +1206,219 @@
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
+   <widget class="QPushButton" name="buFlagMat">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>250</y>
+      <width>31</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_32">
+    <property name="geometry">
+     <rect>
+      <x>-5</x>
+      <y>225</y>
+      <width>61</width>
+      <height>14</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Rend.Ord:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="leMatRendOrd">
+    <property name="geometry">
+     <rect>
+      <x>60</x>
+      <y>220</y>
+      <width>37</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>-8</number>
+    </property>
+    <property name="maximum">
+     <number>7</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="labelShader">
+    <property name="geometry">
+     <rect>
+      <x>12</x>
+      <y>31</y>
+      <width>46</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <kerning>true</kerning>
+     </font>
+    </property>
+    <property name="text">
+     <string>Shader:</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="labelDiffuseA">
+    <property name="geometry">
+     <rect>
+      <x>6</x>
+      <y>60</y>
+      <width>54</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <kerning>true</kerning>
+     </font>
+    </property>
+    <property name="text">
+     <string>DiffuseA:</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="labelDiffuseB">
+    <property name="geometry">
+     <rect>
+      <x>6</x>
+      <y>80</y>
+      <width>54</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <kerning>true</kerning>
+     </font>
+    </property>
+    <property name="text">
+     <string>DiffuseB:</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="labelBump">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>100</y>
+      <width>40</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <kerning>true</kerning>
+     </font>
+    </property>
+    <property name="text">
+     <string>Bump:</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="labelEnviro">
+    <property name="geometry">
+     <rect>
+      <x>16</x>
+      <y>120</y>
+      <width>44</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <kerning>true</kerning>
+     </font>
+    </property>
+    <property name="text">
+     <string>Enviro:</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="labelSpecular">
+    <property name="geometry">
+     <rect>
+      <x>6</x>
+      <y>140</y>
+      <width>53</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <kerning>true</kerning>
+     </font>
+    </property>
+    <property name="text">
+     <string>Specular:</string>
+    </property>
+    <property name="checkable">
+     <bool>false</bool>
+    </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="skeletonData">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>1150</y>
+     <y>1290</y>
      <width>181</width>
      <height>51</height>
     </rect>
@@ -1288,7 +1457,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>530</y>
+     <y>670</y>
      <width>181</width>
      <height>271</height>
     </rect>
@@ -1387,7 +1556,7 @@
      <rect>
       <x>60</x>
       <y>120</y>
-      <width>113</width>
+      <width>111</width>
       <height>20</height>
      </rect>
     </property>
@@ -1568,7 +1737,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>1310</y>
+     <y>1450</y>
      <width>181</width>
      <height>231</height>
     </rect>
