openBrf_source_0.0.40.zip

--- a/resource.qrc
+++ b/resource.qrc
@@ -1,5 +1,6 @@
 <RCC>
-    <qresource prefix="/" >
+    <qresource prefix="/">
         <file>openBrf.ico</file>
+        <file>openbrf_zh.qm</file>
     </qresource>
 </RCC>
