--- a/askCreaseDialog.ui
+++ b/askCreaseDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>141</width>
-    <height>307</height>
+    <height>319</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>244</y>
+     <y>280</y>
      <width>101</width>
      <height>32</height>
     </rect>
@@ -80,7 +80,7 @@ how many hard edges?</string>
     </font>
    </property>
    <property name="text">
-    <string>all edges soft*</string>
+    <string>all edges soft</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
@@ -107,23 +107,18 @@ how many hard edges?</string>
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QCheckBox" name="seamsCB">
    <property name="geometry">
     <rect>
-     <x>2</x>
-     <y>290</y>
-     <width>121</width>
-     <height>20</height>
+     <x>30</x>
+     <y>230</y>
+     <width>111</width>
+     <height>41</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <pointsize>7</pointsize>
-     <italic>false</italic>
-    </font>
-   </property>
    <property name="text">
-    <string>* except texture seams</string>
+    <string>keep texture
+seams hard</string>
    </property>
   </widget>
  </widget>
