--- a/resource.qrc
+++ b/resource.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>openBrf.ico</file>
-        <file>openbrf_zh.qm</file>
+        <file>translations/openbrf_zh.qm</file>
+        <file>translations/openbrf_es.qm</file>
     </qresource>
 </RCC>
