openBrf_source_0.0.48.zip

--- a/guipanel.ui
+++ b/guipanel.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>OpenBRF</string>
   </property>
   <widget class="QGroupBox" name="meshData">
    <property name="geometry">
