--- a/resource.qrc
+++ b/resource.qrc
@@ -3,5 +3,7 @@
         <file>openBrf.ico</file>
         <file>translations/openbrf_zh.qm</file>
         <file>translations/openbrf_es.qm</file>
+        <file>translations/qt_es.qm</file>
+        <file>translations/qt_zh_CN.qm</file>
     </qresource>
 </RCC>
