--- a/askNewUiPictureDialog.ui
+++ b/askNewUiPictureDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>342</width>
-    <height>418</height>
+    <width>445</width>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>350</y>
+     <x>250</x>
+     <y>430</y>
      <width>121</width>
      <height>51</height>
     </rect>
@@ -53,8 +53,8 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>10</x>
      <y>120</y>
-     <width>321</width>
-     <height>181</height>
+     <width>431</width>
+     <height>241</height>
     </rect>
    </property>
    <property name="title">
@@ -65,38 +65,38 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>191</width>
-      <height>131</height>
+      <width>414</width>
+      <height>211</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="1" column="0">
+     <item row="2" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>X:</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
+     <item row="3" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Y:</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
+     <item row="2" column="1">
       <widget class="QLineEdit" name="posX"/>
      </item>
-     <item row="2" column="1">
+     <item row="3" column="1">
       <widget class="QLineEdit" name="posY"/>
      </item>
-     <item row="1" column="2">
+     <item row="2" column="3">
       <widget class="QLineEdit" name="sizeX"/>
      </item>
-     <item row="2" column="2">
+     <item row="3" column="3">
       <widget class="QLineEdit" name="sizeY"/>
      </item>
-     <item row="0" column="2">
+     <item row="1" column="3">
       <widget class="QLabel" name="label_4">
        <property name="text">
         <string>Size:</string>
@@ -106,69 +106,241 @@ p, li { white-space: pre-wrap; }
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
+     <item row="1" column="1">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Lower-left
 corner: </string>
        </property>
-      </widget>
-     </item>
-     <item row="3" column="2">
-      <widget class="QPushButton" name="setActualPixels">
-       <property name="text">
-        <string>Actual pixels</string>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
-      <widget class="QPushButton" name="setCenter">
+     <item row="2" column="4">
+      <widget class="QRadioButton" name="measurePerc">
        <property name="text">
-        <string>Center</string>
+        <string>in % of screen</string>
        </property>
       </widget>
+     </item>
+     <item row="3" column="4">
+      <widget class="QRadioButton" name="measurePixel">
+       <property name="text">
+        <string>in pixels, on a
+1024x768 sceen</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QWidget" name="widget_2" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <layout class="QGridLayout" name="gridLayout">
+        <property name="margin">
+         <number>1</number>
+        </property>
+        <property name="spacing">
+         <number>1</number>
+        </property>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="pushButton_NW">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QPushButton" name="pushButton_N">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>5</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QPushButton" name="pushButton_C">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>5</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="1">
+         <widget class="QPushButton" name="pushButton_SW">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>5</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="2">
+         <widget class="QPushButton" name="pushButton_S">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>5</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QPushButton" name="pushButton_NE">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>5</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="3">
+         <widget class="QPushButton" name="pushButton_E">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>5</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="3">
+         <widget class="QPushButton" name="pushButton_SE">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>5</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QPushButton" name="pushButton_W">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>5</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Align:</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item row="6" column="3">
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QPushButton" name="setActualPixels">
+         <property name="text">
+          <string>Actual pixels</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="setFullScreen">
+         <property name="text">
+          <string>Set fullscreen</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
-   </widget>
-   <widget class="QRadioButton" name="measurePixel">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>85</y>
-      <width>111</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>in pixels, on a
-1024x768 sceen</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="measurePerc">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>65</y>
-      <width>111</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>in % of screen</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="setFullScreen">
-    <property name="geometry">
-     <rect>
-      <x>35</x>
-      <y>150</y>
-      <width>158</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Set fullscreen</string>
-    </property>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
@@ -176,7 +348,7 @@ corner: </string>
     <rect>
      <x>10</x>
      <y>60</y>
-     <width>321</width>
+     <width>431</width>
      <height>51</height>
     </rect>
    </property>
@@ -186,8 +358,8 @@ corner: </string>
    <widget class="QPushButton" name="browse">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>19</y>
+      <x>340</x>
+      <y>20</y>
       <width>81</width>
       <height>23</height>
      </rect>
@@ -199,9 +371,9 @@ corner: </string>
    <widget class="QLineEdit" name="NameBox">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>30</x>
       <y>20</y>
-      <width>201</width>
+      <width>281</width>
       <height>20</height>
      </rect>
     </property>
@@ -210,8 +382,8 @@ corner: </string>
   <widget class="QGroupBox" name="groupBox_3">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>310</y>
+     <x>10</x>
+     <y>390</y>
      <width>151</width>
      <height>91</height>
     </rect>
@@ -262,8 +434,8 @@ corner: </string>
   <widget class="QCheckBox" name="replaceOpt">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>310</y>
+     <x>250</x>
+     <y>390</y>
      <width>121</width>
      <height>31</height>
     </rect>
