--- a/askTexturenameDialog.ui
+++ b/askTexturenameDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>273</width>
-    <height>142</height>
+    <width>289</width>
+    <height>171</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,9 +16,9 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>-130</x>
-     <y>100</y>
-     <width>341</width>
+     <x>60</x>
+     <y>140</y>
+     <width>161</width>
      <height>32</height>
     </rect>
    </property>
@@ -29,27 +29,17 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
-   <property name="geometry">
-    <rect>
-     <x>70</x>
-     <y>40</y>
-     <width>121</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>16</x>
-     <y>45</y>
-     <width>46</width>
-     <height>14</height>
+     <x>5</x>
+     <y>10</y>
+     <width>51</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>name:</string>
+    <string>name(s):</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -58,10 +48,10 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>40</y>
+     <x>220</x>
+     <y>12</y>
      <width>51</width>
-     <height>23</height>
+     <height>61</height>
     </rect>
    </property>
    <property name="text">
@@ -71,14 +61,24 @@
   <widget class="QCheckBox" name="checkBox">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>70</y>
+     <x>50</x>
+     <y>90</y>
      <width>181</width>
-     <height>18</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>also add a new Texture</string>
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>10</y>
+     <width>151</width>
+     <height>61</height>
+    </rect>
    </property>
   </widget>
  </widget>
