openBrf_source_0.0.56.zip

--- a/guipanel.ui
+++ b/guipanel.ui
@@ -597,7 +597,7 @@
         <string>Texture</string>
        </property>
        <property name="shortcut">
-        <string>Ctrl+R</string>
+        <string>Ctrl+T</string>
        </property>
        <property name="checked">
         <bool>true</bool>
