--- a/resource.qrc
+++ b/resource.qrc
@@ -6,5 +6,6 @@
         <file>translations/qt_es.qm</file>
         <file>translations/qt_zh_CN.qm</file>
         <file>translations/openbrf_de.qm</file>
+        <file>femininizer.morpher</file>
     </qresource>
 </RCC>
