--- a/guipanel.ui
+++ b/guipanel.ui
@@ -770,9 +770,6 @@
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
-      <zorder>cbRefani</zorder>
-      <zorder>label_21</zorder>
-      <zorder>viewMeshRendering</zorder>
      </widget>
     </item>
     <item>
@@ -2638,12 +2635,25 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>45</x>
           <y>5</y>
-          <width>61</width>
+          <width>71</width>
           <height>20</height>
          </rect>
         </property>
         <property name="text">
          <string/>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="buFlagBody">
+        <property name="geometry">
+         <rect>
+          <x>118</x>
+          <y>4</y>
+          <width>31</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>...</string>
         </property>
        </widget>
       </widget>
