--- a/resource.qrc
+++ b/resource.qrc
@@ -7,5 +7,8 @@
         <file>translations/qt_zh_CN.qm</file>
         <file>translations/openbrf_de.qm</file>
         <file>femininizer.morpher</file>
+        <file>shaders/iron_fragment.cpp</file>
+        <file>shaders/bump_vertex.cpp</file>
+        <file>shaders/bump_fragment.cpp</file>
     </qresource>
 </RCC>
