--- a/askTransformDialog.ui
+++ b/askTransformDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>121</width>
-    <height>459</height>
+    <width>191</width>
+    <height>389</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,16 +17,16 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>390</y>
-     <width>101</width>
-     <height>61</height>
+     <y>350</y>
+     <width>171</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="orientation">
-    <enum>Qt::Vertical</enum>
+    <enum>Qt::Horizontal</enum>
    </property>
    <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok|QDialogButtonBox::Reset</set>
    </property>
   </widget>
   <widget class="QGroupBox" name="groupBox">
@@ -34,14 +34,14 @@
     <rect>
      <x>10</x>
      <y>110</y>
-     <width>101</width>
+     <width>171</width>
      <height>91</height>
     </rect>
    </property>
    <property name="title">
     <string>Rotation</string>
    </property>
-   <widget class="QSpinBox" name="rotx">
+   <widget class="QDoubleSpinBox" name="rotx">
     <property name="geometry">
      <rect>
       <x>22</x>
@@ -54,16 +54,16 @@
      <bool>true</bool>
     </property>
     <property name="minimum">
-     <number>-180</number>
+     <double>-360.000000000000000</double>
     </property>
     <property name="maximum">
-     <number>180</number>
+     <double>360.000000000000000</double>
     </property>
     <property name="singleStep">
-     <number>15</number>
+     <double>15.000000000000000</double>
     </property>
    </widget>
-   <widget class="QSpinBox" name="roty">
+   <widget class="QDoubleSpinBox" name="roty">
     <property name="geometry">
      <rect>
       <x>22</x>
@@ -76,16 +76,16 @@
      <bool>true</bool>
     </property>
     <property name="minimum">
-     <number>-180</number>
+     <double>-360.000000000000000</double>
     </property>
     <property name="maximum">
-     <number>180</number>
+     <double>360.000000000000000</double>
     </property>
     <property name="singleStep">
-     <number>15</number>
+     <double>15.000000000000000</double>
     </property>
    </widget>
-   <widget class="QSpinBox" name="rotz">
+   <widget class="QDoubleSpinBox" name="rotz">
     <property name="geometry">
      <rect>
       <x>22</x>
@@ -98,13 +98,13 @@
      <bool>true</bool>
     </property>
     <property name="minimum">
-     <number>-180</number>
+     <double>-360.000000000000000</double>
     </property>
     <property name="maximum">
-     <number>180</number>
+     <double>360.000000000000000</double>
     </property>
     <property name="singleStep">
-     <number>15</number>
+     <double>15.000000000000000</double>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -161,7 +161,7 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>101</width>
+     <width>171</width>
      <height>91</height>
     </rect>
    </property>
@@ -291,14 +291,305 @@
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
+   <widget class="QWidget" name="widget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>94</x>
+      <y>20</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <widget class="QPushButton" name="rightX">
+     <property name="geometry">
+      <rect>
+       <x>45</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>icons/ico_right.png</normaloff>icons/ico_right.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="leftX">
+     <property name="geometry">
+      <rect>
+       <x>1</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resource.qrc">
+       <normaloff>:/icons/ico_left.png</normaloff>:/icons/ico_left.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="midX">
+     <property name="geometry">
+      <rect>
+       <x>23</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resource.qrc">
+       <normaloff>:/icons/ico_mid.png</normaloff>:/icons/ico_mid.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="widget_2" native="true">
+    <property name="geometry">
+     <rect>
+      <x>94</x>
+      <y>40</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <widget class="QPushButton" name="leftY">
+     <property name="geometry">
+      <rect>
+       <x>1</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resource.qrc">
+       <normaloff>:/icons/ico_left.png</normaloff>:/icons/ico_left.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="midY">
+     <property name="geometry">
+      <rect>
+       <x>23</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resource.qrc">
+       <normaloff>:/icons/ico_mid.png</normaloff>:/icons/ico_mid.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="rightY">
+     <property name="geometry">
+      <rect>
+       <x>45</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>icons/ico_right.png</normaloff>icons/ico_right.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="widget_3" native="true">
+    <property name="geometry">
+     <rect>
+      <x>94</x>
+      <y>60</y>
+      <width>71</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <widget class="QPushButton" name="leftZ">
+     <property name="geometry">
+      <rect>
+       <x>1</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resource.qrc">
+       <normaloff>:/icons/ico_left.png</normaloff>:/icons/ico_left.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="midZ">
+     <property name="geometry">
+      <rect>
+       <x>23</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resource.qrc">
+       <normaloff>:/icons/ico_mid.png</normaloff>:/icons/ico_mid.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="rightZ">
+     <property name="geometry">
+      <rect>
+       <x>45</x>
+       <y>1</y>
+       <width>25</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset>
+       <normaloff>icons/ico_right.png</normaloff>icons/ico_right.png</iconset>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>11</width>
+       <height>11</height>
+      </size>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
+     </property>
+     <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_3">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>210</y>
-     <width>101</width>
-     <height>111</height>
+     <width>171</width>
+     <height>91</height>
     </rect>
    </property>
    <property name="title">
@@ -427,8 +718,8 @@
    <widget class="QCheckBox" name="checkBox">
     <property name="geometry">
      <rect>
-      <x>24</x>
-      <y>86</y>
+      <x>100</x>
+      <y>52</y>
       <width>72</width>
       <height>18</height>
      </rect>
@@ -444,20 +735,21 @@
   <widget class="QCheckBox" name="applyToLastSel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>340</y>
-     <width>101</width>
+     <x>20</x>
+     <y>310</y>
+     <width>151</width>
      <height>41</height>
     </rect>
    </property>
    <property name="text">
-    <string>Apply to
-last selected
+    <string>Apply to last selected
 object only</string>
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
